add_library(backends.cuda.image.arithmetic 
	8s/abs.cu
	8s/add.cu
	8s/addMasked.cu	
	8s/addProduct.cu
	8s/addProductMasked.cu	
	8s/addSquare.cu
	8s/addSquareMasked.cu	
	8s/addWeighted.cu
	8s/addWeightedMasked.cu	
	8s/alphaComp.cu
	8s/alphaCompC.cu
	8s/alphaPremul.cu
	8s/and.cu	
	8s/div.cu
	8s/divMasked.cu	
	8s/exp.cu	
	8s/ln.cu	
	8s/lshift.cu	
	8s/mul.cu
	8s/mulMasked.cu	
	8s/not.cu
	8s/or.cu	
	8s/rshift.cu
	8s/sqr.cu
	8s/sqrt.cu
	8s/sub.cu
	8s/subMasked.cu
	8s/xor.cu
	
	8u/absDiff.cu
	8u/add.cu
	8u/addMasked.cu	
	8u/addProduct.cu
	8u/addProductMasked.cu	
	8u/addSquare.cu
	8u/addSquareMasked.cu	
	8u/addWeighted.cu
	8u/addWeightedMasked.cu	
	8u/alphaComp.cu
	8u/alphaCompC.cu
	8u/alphaPremul.cu
	8u/and.cu	
	8u/div.cu
	8u/divMasked.cu	
	8u/exp.cu	
	8u/ln.cu	
	8u/lshift.cu	
	8u/mul.cu
	8u/mulMasked.cu	
	8u/not.cu
	8u/or.cu	
	8u/rshift.cu
	8u/sqr.cu
	8u/sqrt.cu
	8u/sub.cu
	8u/subMasked.cu
	8u/xor.cu
	
	16s/abs.cu
	16s/add.cu
	16s/addMasked.cu	
	16s/addProduct.cu
	16s/addProductMasked.cu	
	16s/addSquare.cu
	16s/addSquareMasked.cu	
	16s/addWeighted.cu
	16s/addWeightedMasked.cu	
	16s/alphaComp.cu
	16s/alphaCompC.cu
	16s/alphaPremul.cu
	16s/and.cu	
	16s/div.cu
	16s/divMasked.cu	
	16s/exp.cu	
	16s/ln.cu	
	16s/lshift.cu
	16s/makeComplex.cu		
	16s/mul.cu
	16s/mulMasked.cu	
	16s/not.cu
	16s/or.cu	
	16s/rshift.cu
	16s/sqr.cu
	16s/sqrt.cu
	16s/sub.cu
	16s/subMasked.cu
	16s/xor.cu
	
	16u/absDiff.cu
	16u/add.cu
	16u/addMasked.cu	
	16u/addProduct.cu
	16u/addProductMasked.cu	
	16u/addSquare.cu
	16u/addSquareMasked.cu	
	16u/addWeighted.cu
	16u/addWeightedMasked.cu	
	16u/alphaComp.cu
	16u/alphaCompC.cu
	16u/alphaPremul.cu
	16u/and.cu	
	16u/div.cu
	16u/divMasked.cu	
	16u/exp.cu	
	16u/ln.cu	
	16u/lshift.cu	
	16u/mul.cu
	16u/mulMasked.cu	
	16u/not.cu
	16u/or.cu	
	16u/rshift.cu
	16u/sqr.cu
	16u/sqrt.cu
	16u/sub.cu
	16u/subMasked.cu
	16u/xor.cu
	
	32s/abs.cu
	32s/add.cu
	32s/addMasked.cu	
	32s/addProduct.cu
	32s/addProductMasked.cu	
	32s/addSquare.cu
	32s/addSquareMasked.cu	
	32s/addWeighted.cu
	32s/addWeightedMasked.cu	
	32s/alphaComp.cu
	32s/alphaCompC.cu
	32s/alphaPremul.cu
	32s/and.cu	
	32s/div.cu
	32s/divMasked.cu	
	32s/exp.cu	
	32s/ln.cu	
	32s/lshift.cu	
	32s/makeComplex.cu	
	32s/mul.cu
	32s/mulMasked.cu	
	32s/not.cu
	32s/or.cu	
	32s/rshift.cu
	32s/sqr.cu
	32s/sqrt.cu
	32s/sub.cu
	32s/subMasked.cu
	32s/xor.cu
	
	32u/absDiff.cu
	32u/add.cu
	32u/addMasked.cu	
	32u/addProduct.cu
	32u/addProductMasked.cu	
	32u/addSquare.cu
	32u/addSquareMasked.cu	
	32u/addWeighted.cu
	32u/addWeightedMasked.cu	
	32u/alphaComp.cu
	32u/alphaCompC.cu
	32u/alphaPremul.cu
	32u/and.cu	
	32u/div.cu
	32u/divMasked.cu	
	32u/exp.cu	
	32u/ln.cu	
	32u/lshift.cu	
	32u/mul.cu
	32u/mulMasked.cu	
	32u/not.cu
	32u/or.cu	
	32u/rshift.cu
	32u/sqr.cu
	32u/sqrt.cu
	32u/sub.cu
	32u/subMasked.cu
	32u/xor.cu
	
	16f/abs.cu
	16f/absDiff.cu
	16f/add.cu
	16f/addMasked.cu	
	16f/addProduct.cu
	16f/addProductMasked.cu	
	16f/addSquare.cu
	16f/addSquareMasked.cu	
	16f/addWeighted.cu
	16f/addWeightedMasked.cu	
	16f/alphaComp.cu
	16f/alphaCompC.cu
	16f/alphaPremul.cu
	16f/div.cu
	16f/divMasked.cu	
	16f/exp.cu	
	16f/ln.cu		
	16f/mul.cu
	16f/mulMasked.cu
	16f/sqr.cu
	16f/sqrt.cu
	16f/sub.cu
	16f/subMasked.cu
	
	16bf/abs.cu
	16bf/absDiff.cu
	16bf/add.cu
	16bf/addMasked.cu	
	16bf/addProduct.cu
	16bf/addProductMasked.cu	
	16bf/addSquare.cu
	16bf/addSquareMasked.cu	
	16bf/addWeighted.cu
	16bf/addWeightedMasked.cu	
	16bf/alphaComp.cu
	16bf/alphaCompC.cu
	16bf/alphaPremul.cu
	16bf/div.cu
	16bf/divMasked.cu	
	16bf/exp.cu	
	16bf/ln.cu	
	16bf/mul.cu
	16bf/mulMasked.cu	
	16bf/sqr.cu
	16bf/sqrt.cu
	16bf/sub.cu
	16bf/subMasked.cu
	
	32f/abs.cu
	32f/absDiff.cu
	32f/add.cu
	32f/addMasked.cu	
	32f/addProduct.cu
	32f/addProductMasked.cu	
	32f/addSquare.cu
	32f/addSquareMasked.cu	
	32f/addWeighted.cu
	32f/addWeightedMasked.cu	
	32f/alphaComp.cu
	32f/alphaCompC.cu
	32f/alphaPremul.cu
	32f/div.cu
	32f/divMasked.cu	
	32f/exp.cu	
	32f/ln.cu	
	32f/makeComplex.cu	
	32f/mul.cu
	32f/mulMasked.cu	
	32f/sqr.cu
	32f/sqrt.cu
	32f/sub.cu
	32f/subMasked.cu
	
	64f/abs.cu
	64f/absDiff.cu
	64f/add.cu
	64f/addMasked.cu	
	64f/addProduct.cu
	64f/addProductMasked.cu	
	64f/addSquare.cu
	64f/addSquareMasked.cu	
	64f/addWeighted.cu
	64f/addWeightedMasked.cu	
	64f/alphaComp.cu
	64f/alphaCompC.cu
	64f/alphaPremul.cu
	64f/div.cu
	64f/divMasked.cu	
	64f/exp.cu	
	64f/ln.cu		
	64f/mul.cu
	64f/mulMasked.cu	
	64f/sqr.cu
	64f/sqrt.cu
	64f/sub.cu
	64f/subMasked.cu
	
	16sc/add.cu
	16sc/addMasked.cu	
	16sc/addProduct.cu
	16sc/addProductMasked.cu	
	16sc/addSquare.cu
	16sc/addSquareMasked.cu	
	16sc/addWeighted.cu
	16sc/addWeightedMasked.cu	
	16sc/conj.cu
	16sc/conjMul.cu
	16sc/div.cu
	16sc/divMasked.cu	
	16sc/exp.cu	
	16sc/imag.cu
	16sc/ln.cu	
	16sc/mul.cu
	16sc/mulMasked.cu
	16sc/real.cu	
	16sc/sqr.cu
	16sc/sqrt.cu
	16sc/sub.cu
	16sc/subMasked.cu
	
	32sc/add.cu
	32sc/addMasked.cu	
	32sc/addProduct.cu
	32sc/addProductMasked.cu	
	32sc/addSquare.cu
	32sc/addSquareMasked.cu	
	32sc/addWeighted.cu
	32sc/addWeightedMasked.cu	
	32sc/conj.cu
	32sc/conjMul.cu
	32sc/div.cu
	32sc/divMasked.cu	
	32sc/exp.cu	
	32sc/imag.cu
	32sc/ln.cu	
	32sc/mul.cu
	32sc/mulMasked.cu
	32sc/real.cu	
	32sc/sqr.cu
	32sc/sqrt.cu
	32sc/sub.cu
	32sc/subMasked.cu
	
	
	32fc/add.cu
	32fc/addMasked.cu	
	32fc/addProduct.cu
	32fc/addProductMasked.cu	
	32fc/addSquare.cu
	32fc/addSquareMasked.cu	
	32fc/addWeighted.cu
	32fc/addWeightedMasked.cu	
	32fc/angle.cu	
	32fc/conj.cu
	32fc/conjMul.cu
	32fc/div.cu
	32fc/divMasked.cu	
	32fc/exp.cu	
	32fc/imag.cu
	32fc/ln.cu	
	32fc/magnitude.cu	
	32fc/magnitudeSqr.cu	
	32fc/mul.cu
	32fc/mulMasked.cu
	32fc/real.cu	
	32fc/sqr.cu
	32fc/sqrt.cu
	32fc/sub.cu
	32fc/subMasked.cu
	)
	
target_include_directories(backends.cuda.image.arithmetic  PUBLIC 
						   ${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES}
						   ${PROJECT_SOURCE_DIR}/src
						  )
target_link_libraries(backends.cuda.image.arithmetic PRIVATE  
						project_options					
						)
target_link_libraries(backends.cuda.image.arithmetic PUBLIC  
						backends.cuda
						common
						common.image
						)